# dagster-omics

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  workspace.yaml
.github/workflows/: ci.yaml
applications/cell-ranger/: Dockerfile  Omics.ipynb  README.md  requirements.txt
src/dagster_omics/: __init__.py  definitions.py  sensor.py
src/dagster_omics/assets/: nemo_manifest.py
tests/: __init__.py  test_sensor.py
tests/integration_tests/: test_sensor.py
