[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagster-omics"
version = "0.1.0"
description = "Dagster workflows for downloading and analyzing omic data from sources like NCI Genomic Data Commons"
requires-python = ">=3.12"
dependencies = [
    "dagster",
    "dagster-ncsa",
    "dagster-webserver",
    "dagster-cloud",
    "boto3==1.34.131",
    "dagster-aws",
    "dagster-postgres"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_omics"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/integration_tests"] 